--- a/.env.example
+++ b/.env.example
@@ -21,6 +21,8 @@ FILESYSTEM_DISK=local
 QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
+CACHE_USERS_LiFETIME=100
+CACHE_CATEGORIES_LiFETIME=100
 
 MEMCACHED_HOST=127.0.0.1
 
